better enjoy and baidu-it-for-you

--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -228,7 +228,7 @@
 		</span>
 		<span class="button_wrapper">
 		  <div class="inner">
-			<input id="lucky" rel="localize[lucky_button]" type="button" value="查看百科">
+			<input id="lucky" rel="localize[lucky_button]" type="button" value="试试谷歌">
 		  </div>
 		</span>
 	  </form>
