--- a/apps/index.html
+++ b/apps/index.html
@@ -3,9 +3,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Shengbin's Small Apps</title>
 <style type="text/css">
-	ul li {font-size:18px;}
+	ul {font-size:18px;}
 	img#pokeball {margin:0; padding:0; position:absolute;}
-	p#log {font-weight:bold; font-size:small; text-align:center; }
 </style>
 <!-- for Google Analytics -->
 <script type="text/javascript">
