--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -3,27 +3,14 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Reading - 阅读</title>
-	<style type='text/css'>
-		body {
-			text-align:center;
-			max-width:900px;
-			margin:0 auto;
-			font-family: arial, helvetica, sans-serif;
-			font-size: 18px;
-			color:#444;
-			background:#FAF9F5;
-		}
-		#movies {
-			text-align:center;
-			margin-left:auto;
-			margin-right:auto;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./enjoy.css">
 </head>
 <body>
 <h1>Reading</h1>
 <p>Eat for life. Read to live.</p>
+<p>I share some of what I read via Weibo. Check it out!</p>
 <div id="reading">
+<iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=0&ptype=0&speed=0&skin=0&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1655326502&verifier=a4b56a6a&dpc=1"></iframe>
 </div>
 </body>
 </html>
