--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -3,8 +3,7 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>Music - 音乐</title>
-	<link rel="stylesheet" type="text/css" href="./music.css">
-	<script type="text/javascript" src="./douban_lrc.js"></script>
+	<link rel="stylesheet" type="text/css" href="./enjoy.css">
 </head>
 <body>
 <h1>Music</h1>
@@ -12,10 +11,10 @@
 <div id="radio">
 <iframe width="420px" height="185px" src="http://douban.fm/partner/baidu/doubanradio" frameborder="no"></iframe>
 </div>
-<div id="douban_lrc_">
-</div>
+
 <div id="songs">
 <script src="http://img3.douban.com/js/packed_radiowidget_plain6002010748.js?doubanid=58704433&maxresults=10&color=0"></script>
 </div>
+
 </body>
 </html>
