move images to folder

--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -61,7 +61,7 @@
       
       /* line 49 */
       input#search, input#lucky {
-        background: url("./button.png") repeat scroll center transparent;
+        background: url("./images/button.png") repeat scroll center transparent;
         border: medium none;
         color: black;
         cursor: pointer;
@@ -214,7 +214,7 @@
 	<center class="primary">
 	  <div class="logo">
 		<span rel="localize[pre_logo]">让我帮你</span>
-		<img id="logo" src="./baidu-logo.png" style="opacity: 1;">
+		<img id="logo" src="./images/baidu-logo.png" style="opacity: 1;">
 		<span rel="localize[post_logo]">百度一下</span>
 	  </div>
 	  <form class="search">
@@ -250,7 +250,7 @@
 	  <p>By: Shengbin Meng</p>
 	  The logo belongs to Baidu. And I am here: <a href="http://www.shengbin.me">www.shengbin.me</a>
 	</div>
-	<img id="fake_mouse" src="./mouse-arrow.png" style="display: none">
+	<img id="fake_mouse" src="./images/mouse-arrow.png" style="display: none">
 
 </body>
 </html>
