--- a/enjoy/index.html
+++ b/enjoy/index.html
@@ -1,24 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Enjoy - 乐事</title>
-	<style type='text/css'>
-		body {
-			text-align:center;
-			max-width:900px;
-			margin:0 auto;
-			font-family: arial, helvetica, sans-serif;
-			font-size: 18px;
-			color:#444;
-			background:#FAF9F5;
-		}
-	</style>
+<meta charset="utf-8">
+<title>Enjoy - 乐事</title>
+<link rel="stylesheet" type="text/css" href="../shengbin.css">
+<!-- for Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30081581-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- end for Google Analytics -->
 </head>
+
 <body>
+<header>
+    <nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps">Apps</a>
+            <ul class="subs">
+                <li><a href="/apps/ipgateway">IPGateway</a></li>
+                <li><a href="/apps/unibbs">UniBBS</a></li>
+                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="/apps">SAE Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/enjoy">Enjoy</a>
+            <ul class="subs">
+                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/music.html">Music</a></li>
+                <li><a href="/enjoy/movies.html">Movies</a></li>
+            </ul>
+        </li>
+        <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
+        <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
+    </ul>
+    </nav>
+    <p>Welcome!</p>
+    <div style="clear:both"></div>
+</header>
+
+<main>
 <h1>Enjoy</h1>
-<p><a href="./music.html">Music</a></p>
-<p><a href="./movies.html">Movies</a></p>
-<p><a href="./reading.html">Reading</a></p>
+<h2>Click to go:</h2>
+<ul>
+<li><a href="./music.html">Music</a></li>
+<li><a href="./movies.html">Movies</a></li>
+<li><a href="./reading.html">Reading</a></li>
+</ul>
+</main>
+
+<footer>
+</footer>
 </body>
 </html>
