--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -1,17 +1,51 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Movies - 电影</title>
-	<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<meta charset="utf-8">
+<title>Movies - 电影</title>
+<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<link rel="stylesheet" type="text/css" href="../shengbin.css">
 </head>
 <body>
+<header>
+    <nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps">Apps</a>
+            <ul class="subs">
+                <li><a href="/apps/ipgateway">IPGateway</a></li>
+                <li><a href="/apps/unibbs">UniBBS</a></li>
+                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="/apps">SAE Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/enjoy">Enjoy</a>
+            <ul class="subs">
+                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/music.html">Music</a></li>
+                <li><a href="/enjoy/movies.html">Movies</a></li>
+            </ul>
+        </li>
+        <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
+        <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
+    </ul>
+    </nav>
+    <p>Welcome!</p>
+    <div style="clear:both"></div>
+</header>
+
+<main>
 <h1>Movies</h1>
-<p>I always watch movies, good or perfect.</p>
-<p>Recently the following ones.</p>
+<p class="tagline">I always watch movies, good or perfect.</p>
+<p class="tagline">Recently the following ones.</p>
 <div id="movies">
 <p><script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?show=collection&amp;n=16&amp;columns=8&amp;picsize=medium&amp;hidelogo=yes&amp;hideself=yes&amp;cat=movie" ></script>
 </p>
 </div>
+</main>
+
+<footer>
+</footer>
 </body>
 </html>
