--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -1,20 +1,53 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Music - 音乐</title>
-	<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<meta charset="utf-8">
+<title>Music - 音乐</title>
+<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<link rel="stylesheet" type="text/css" href="../shengbin.css">
 </head>
+
 <body>
+<header>
+    <nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps">Apps</a>
+            <ul class="subs">
+                <li><a href="/apps/ipgateway">IPGateway</a></li>
+                <li><a href="/apps/unibbs">UniBBS</a></li>
+                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="/apps">SAE Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/enjoy">Enjoy</a>
+            <ul class="subs">
+                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/music.html">Music</a></li>
+                <li><a href="/enjoy/movies.html">Movies</a></li>
+            </ul>
+        </li>
+        <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
+        <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
+    </ul>
+    </nav>
+    <p>Welcome!</p>
+    <div style="clear:both"></div>
+</header>
+
+<main>
 <h1>Music</h1>
-<p>When I was young I listened to the radio, waiting for my favorite song.</p>
+<p class="tagline">When I was young I listened to the radio, waiting for my favorite song.</p>
 <div id="radio">
 <iframe width="420px" height="185px" src="http://douban.fm/partner/baidu/doubanradio" frameborder="no"></iframe>
 </div>
-
 <div id="songs">
 <script src="http://img3.douban.com/js/packed_radiowidget_plain6002010748.js?doubanid=58704433&maxresults=10&color=0"></script>
 </div>
+</main>
 
+<footer>
+</footer>
 </body>
 </html>
