--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -1,16 +1,53 @@
 <!doctype html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<title>Reading - 阅读</title>
-	<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<meta charset="utf-8">
+<title>Reading - 阅读</title>
+<link rel="stylesheet" type="text/css" href="./enjoy.css">
+<link rel="stylesheet" type="text/css" href="../shengbin.css">
 </head>
+
 <body>
+<header>
+    <nav>
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps">Apps</a>
+            <ul class="subs">
+                <li><a href="/apps/ipgateway">IPGateway</a></li>
+                <li><a href="/apps/unibbs">UniBBS</a></li>
+                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="/apps">SAE Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/enjoy">Enjoy</a>
+            <ul class="subs">
+                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/music.html">Music</a></li>
+                <li><a href="/enjoy/movies.html">Movies</a></li>
+            </ul>
+        </li>
+        <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
+        <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
+    </ul>
+    </nav>
+    <p>Welcome!</p>
+    <div style="clear:both"></div>
+</header>
+
+<main>
 <h1>Reading</h1>
-<p>Eat for life. Read to live.</p>
-<p>I share some of what I read via Weibo. Check it out!</p>
+<p class="tagline">Eat for life. Read to live.</p>
+<p class="tagline">I share some of what I read via Weibo. Check it out!</p>
+<br />
+<br />
 <div id="reading">
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=0&ptype=0&speed=0&skin=0&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1655326502&verifier=a4b56a6a&dpc=1"></iframe>
 </div>
+</main>
+
+<footer>
+</footer>
 </body>
 </html>
