fix links and typos

--- a/enjoy/index.html
+++ b/enjoy/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Enjoy - 乐事</title>
-<link rel="stylesheet" type="text/css" href="../shengbin.css">
+<link rel="stylesheet" type="text/css" href="/shengbin.css">
 <!-- for Google Analytics -->
 <script type="text/javascript">
 
@@ -31,13 +31,13 @@
                 <li><a href="/apps/ipgateway">IPGateway</a></li>
                 <li><a href="/apps/unibbs">UniBBS</a></li>
                 <li><a href="/apps/chisha">ChiSha</a></li>
-                <li><a href="/apps">SAE Apps</a></li>
+                <li><a href="http://shengbin.sinaapp.com">SAE Apps</a></li>
             </ul>
         </li>
         <li><a href="http://blog.shengbin.me">Blog</a></li>
         <li><a href="/enjoy">Enjoy</a>
             <ul class="subs">
-                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/reading.html">Reading</a></li>
                 <li><a href="/enjoy/music.html">Music</a></li>
                 <li><a href="/enjoy/movies.html">Movies</a></li>
             </ul>
