--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta name="author" content="Shengbin Meng">
 <meta name="keywords" content="Shengbin Meng, shengbinmeng, 孟胜彬">
 <meta name="description" content="Shengbin Meng's landing page, providng links to other information about him. 孟胜彬的起始页，提供其在网络上各种信息的链接。">
-<link rel="shortcut icon" href="shengbin.png">
-<link rel="stylesheet" type="text/css" href="./shengbin.css">
+<link rel="shortcut icon" href="/shengbin.png">
+<link rel="stylesheet" type="text/css" href="/shengbin.css">
 <!-- for Google Analytics -->
 <script type="text/javascript">
 
@@ -36,13 +36,13 @@
                 <li><a href="/apps/ipgateway">IPGateway</a></li>
                 <li><a href="/apps/unibbs">UniBBS</a></li>
                 <li><a href="/apps/chisha">ChiSha</a></li>
-                <li><a href="/apps">SAE Apps</a></li>
+                <li><a href="http://shengbin.sinaapp.com">SAE Apps</a></li>
             </ul>
         </li>
         <li><a href="http://blog.shengbin.me">Blog</a></li>
         <li><a href="/enjoy">Enjoy</a>
             <ul class="subs">
-                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/reading.html">Reading</a></li>
                 <li><a href="/enjoy/music.html">Music</a></li>
                 <li><a href="/enjoy/movies.html">Movies</a></li>
             </ul>
