--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Reading - 阅读</title>
 <link rel="stylesheet" type="text/css" href="./enjoy.css">
-<link rel="stylesheet" type="text/css" href="../shengbin.css">
+<link rel="stylesheet" type="text/css" href="/shengbin.css">
 </head>
 
 <body>
@@ -17,13 +17,13 @@
                 <li><a href="/apps/ipgateway">IPGateway</a></li>
                 <li><a href="/apps/unibbs">UniBBS</a></li>
                 <li><a href="/apps/chisha">ChiSha</a></li>
-                <li><a href="/apps">SAE Apps</a></li>
+                <li><a href="http://shengbin.sinaapp.com">SAE Apps</a></li>
             </ul>
         </li>
         <li><a href="http://blog.shengbin.me">Blog</a></li>
         <li><a href="/enjoy">Enjoy</a>
             <ul class="subs">
-                <li><a href="/enjoy/raeding.html">Reading</a></li>
+                <li><a href="/enjoy/reading.html">Reading</a></li>
                 <li><a href="/enjoy/music.html">Music</a></li>
                 <li><a href="/enjoy/movies.html">Movies</a></li>
             </ul>
