use div instead of header/nav/main

--- a/apps/index.html
+++ b/apps/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -43,22 +43,21 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main">
 <h1>Shengbin's Small Apps</h1>
 <h2>Click to go:</h2>
 <ul>
-	<li><a href="baidu-it-for-you">Baidu It For You</a></li>
-	<li><a href="unibbs">UniBBS</a></li>
 	<li><a href="ipgateway">IPGateway</a></li>
+	<li><a href="unibbs">UniBBS</a></li>
 	<li><a href="chisha">ChiSha</a></li>
+	<li><a href="baidu-it-for-you">Baidu It For You</a></li>
 </ul>
-<hr>
-</main>
+</div>
 
 <footer>
 </footer>
