--- a/enjoy/index.html
+++ b/enjoy/index.html
@@ -22,8 +22,8 @@
 </head>
 
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -45,12 +45,12 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main"> 
 <h1>Enjoy</h1>
 <h2>Click to go:</h2>
 <ul>
@@ -58,7 +58,7 @@
 <li><a href="./movies.html">Movies</a></li>
 <li><a href="./reading.html">Reading</a></li>
 </ul>
-</main>
+</div>
 
 <footer>
 </footer>
