--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" type="text/css" href="/shengbin.css">
 </head>
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -30,12 +30,12 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main">
 <h1>Movies</h1>
 <p class="tagline">I always watch movies, good or perfect.</p>
 <p class="tagline">Recently the following ones.</p>
@@ -43,7 +43,7 @@
 <p><script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?show=collection&amp;n=16&amp;columns=8&amp;picsize=medium&amp;hidelogo=yes&amp;hideself=yes&amp;cat=movie" ></script>
 </p>
 </div>
-</main>
+</div>
 
 <footer>
 </footer>
