--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -31,12 +31,12 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main">
 <h1>Music</h1>
 <p class="tagline">When I was young I listened to the radio, waiting for my favorite song.</p>
 <div id="radio">
@@ -45,7 +45,7 @@
 <div id="songs">
 <script src="http://img3.douban.com/js/packed_radiowidget_plain6002010748.js?doubanid=58704433&maxresults=10&color=0"></script>
 </div>
-</main>
+</div>
 
 <footer>
 </footer>
