--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -31,12 +31,12 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main">
 <h1>Reading</h1>
 <p class="tagline">Eat for life. Read to live.</p>
 <p class="tagline">I share some of what I read via Weibo. Check it out!</p>
@@ -45,7 +45,7 @@
 <div id="reading">
 <iframe width="100%" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=0&height=550&fansRow=0&ptype=0&speed=0&skin=0&isTitle=0&noborder=1&isWeibo=1&isFans=0&uid=1655326502&verifier=a4b56a6a&dpc=1"></iframe>
 </div>
-</main>
+</div>
 
 <footer>
 </footer>
