--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 </head>
 
 <body>
-<header>
-    <nav>
+<div class="header">
+    <div class="nav">
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/apps">Apps</a>
@@ -50,12 +50,13 @@
         <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
-    </nav>
+    </div>
     <p>Welcome!</p>
     <div style="clear:both"></div>
-</header>
+</div>
 
-<main>
+<div class="main">
+
 <div id="about">
     <h1>SHENGBIN MENG<br>孟胜彬</h1>
 	<table>
@@ -176,7 +177,8 @@ var duoshuoQuery = {short_name:"shengbin"};
 })();
 </script>
 <!-- Duoshuo Comment END --> 
-</main>
+
+</div>
 
 <footer>
 </footer>
