new pages in /apps

--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -1,15 +1,76 @@
+<!doctype html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>UniBBS</title>
+  <meta charset="utf-8">
+  <title>UniBBS</title>
+  <meta name="description" content="Shengbin's App - UniBBS">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="../stylesheets/apps.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="/shengbin.css">
+
 </head>
+
 <body>
-<h1>UniBBS</h1>
-<p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?l=en&mt=8">UniBBS</a> is an iOS app for accessing BBS of several universities.</p>
-<p>Any questions, please contact the developer directly by Email: shengbinmeng[as a human you know what should be here]gmail.com.</p>
-<p>If you want to join the developing, just drop me a line :)</p>
-<p>The app itself is free, but if it makes you happy and, by giving away a little money, you want to make me happy too, please denote via:<br>
-<a href="https://me.alipay.com/shengbinmeng">Alipay（支付宝）</a> (Don't forget to leave a note. And I really appreciate this, whatever the amount of the money.)
-</p>
+<div class="header">
+    <div class="nav">
+    <ul>
+        <li><a href="/">Home</a></li>
+        <li><a href="/apps">Apps</a>
+            <ul class="subs">
+                <li><a href="/apps/ipgateway">IPGateway</a></li>
+                <li><a href="/apps/unibbs">UniBBS</a></li>
+                <li><a href="/apps/chisha">ChiSha</a></li>
+                <li><a href="http://shengbin.sinaapp.com">SAE Apps</a></li>
+            </ul>
+        </li>
+        <li><a href="http://blog.shengbin.me">Blog</a></li>
+        <li><a href="/enjoy">Enjoy</a>
+            <ul class="subs">
+                <li><a href="/enjoy/reading.html">Reading</a></li>
+                <li><a href="/enjoy/music.html">Music</a></li>
+                <li><a href="/enjoy/movies.html">Movies</a></li>
+            </ul>
+        </li>
+        <li><a href="http://hi.baidu.com/shengbinmeng">Essays</a></li>
+        <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
+    </ul>
+    </div>
+    <p>Welcome!</p>
+    <div style="clear:both"></div>
+</div>
+
+  <div class="wrapper">
+    <h1 class="title">UniBBS</h1>
+    <div id="container">
+      <p class="tagline">For accessing BBS of several universities.</p>
+      <div id="main" role="main">
+        <div class="download-bar">
+        <div class="inner">
+          <a href="https://bitbucket.org/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
+		  <a href="https://me.alipay.com/shengbinmeng" class="download-button" target="_blank"><span>Donate（捐赠）</span></a>
+        </div>
+		
+        <span class="blc"></span><span class="trc"></span>
+        </div>
+        <article class="markdown-body">
+          <h2>北大未名Lite</h2>
+		  <p>访问北大未名BBS的iOS客户端。</p>
+		  <p>可在App Store下载：</p>
+		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?l=en&mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?l=en&mt=8</a></p>
+		  
+		  <hr>
+		  <h1>Donate</h1>
+		  <a name="donate"></a>
+			<p>The app itself is free, but if it makes your life better and, by giving away a little money, you want to make mine better too, please donate via the following link. Don't forget to leave a note. And thank you for whatever amount of the money.</p>
+			<p><a href="https://me.alipay.com/shengbinmeng">https://me.alipay.com/shengbinmeng</a></p>
+        </article>
+      </div>
+    </div>
+    <footer>
+      <div class="owner">
+      <p><a href="https://github.com/shengbinmeng" class="avatar"><img src="https://0.gravatar.com/avatar/b8c7ce4f117d1a4999dc7c0d6935428b?d=https%3A%2F%2Fidenticons.github.com%2F164543f79857390b2deb8efdd668327f.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/shengbinmeng">shengbinmeng</a> maintains all of this. He is <a href="http://www.shengbin.me">here.</a></p>
+      </div>
+    </footer>
+  </div>
 </body>
 </html>
