--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -61,7 +61,7 @@
 		  <hr>
 		  <h1>Donate</h1>
 		  <a name="donate"></a>
-			<p>The app itself is free, but if it makes your life better and, by giving away a little money, you want to make mine better too, please donate via the following link. Don't forget to leave a note. And thank you for whatever amount of the money.</p>
+			<p>The app itself is free, but if it makes your life better and, by giving away a little money, you want to make mine better too, please donate via the following link. Don't forget to leave a note. And thank you for whatever amount of the money. （该应用本身是免费的，但如果你觉得好用，不妨通过捐赠来支持开发者。点击下面的链接进行付款。无论多少，都非常感谢！）</p>
 			<p><a href="https://me.alipay.com/shengbinmeng">https://me.alipay.com/shengbinmeng</a></p>
         </article>
       </div>
