change owner links

--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -66,7 +66,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="https://github.com/shengbinmeng" class="avatar"><img src="https://0.gravatar.com/avatar/b8c7ce4f117d1a4999dc7c0d6935428b?d=https%3A%2F%2Fidenticons.github.com%2F164543f79857390b2deb8efdd668327f.png&amp;s=30" width="48" height="48"/></a> <a href="https://github.com/shengbinmeng">shengbinmeng</a> maintains all of this. He is <a href="http://www.shengbin.me">here.</a></p>
+      <p><a href="http://www.shengbin.me" class="avatar"><img src="https://0.gravatar.com/avatar/b8c7ce4f117d1a4999dc7c0d6935428b?d=https%3A%2F%2Fidenticons.github.com%2F164543f79857390b2deb8efdd668327f.png&amp;s=30" width="48" height="48"/></a> <a href="http://www.shengbin.me">shengbinmeng</a> maintains all of this. He is <a href="http://www.shengbin.me">here.</a></p>
       </div>
     </footer>
   </div>
