--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8">
   <title>UniBBS</title>
   <meta name="description" content="Shengbin's App - UniBBS">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="../stylesheets/apps.css" media="screen"/>
+  <link rel="stylesheet" type="text/css" href="../stylesheets/apps.css"/>
   <link rel="stylesheet" type="text/css" href="/shengbin.css">
 
 </head>
