--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -52,8 +52,13 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h2>吃啥</h2>
-		  <p>开发中……</p>
+          <h2>吃啥（安卓版）</h2>
+		  <p>“吃啥”是一个帮助你决定吃啥的小应用。</p>
+		  <p>点击下面的链接下载.apk文件，并在安卓手机上安装。目前的版本是v0.5，功能不多但基本可用。</p>
+		  <p><a href="http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647">http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647</a></p>
+          
+          <h2>联系开发者</h2>
+		  <p>如有建议或需要帮助，可发邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
