Chinese language for IPGateway, more

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -52,15 +52,15 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <h2>IPGateway</h2>
+          <h2>IPGateway（IP网关）</h2>
 		  <p>IPGateway is a simple but useful app for logging in/out of the IP gateway of Peking University. Choose the version you need.（IPGateway是一个简单实用的小软件，可以用它方便地登录北京大学的IP网关。从下面选取适合你的版本。）</p>
 		  
-		  <h2>IPGateway-iOS</h2>
+		  <h2>IPGateway-iOS（在iPhone/iPad上使用）</h2>
 		  <p>IPGateway for iPhone and iPad is available in the App Store（iOS版本可以在App Store免费下载）:</p>
 			<p><a href="https://itunes.apple.com/cn/app/ipgateway/id493761518?l=en&amp;mt=8">https://itunes.apple.com/cn/app/ipgateway/id493761518?l=en&amp;mt=8</a></p>
 			<p>By the way, you may also use this client（你也可以用下面这个客户端）: <a href="http://itunes.apple.com/cn/app/pku-ipgw-client/id509145354?l=en&mt=8">IPGWClient</a>.</p>
 
-		  <h2>IPGateway-Mac</h2>
+		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
 		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
 		  <p><a href="http://pan.baidu.com/share/link?shareid=3482412976&uk=3808900647">http://pan.baidu.com/share/link?shareid=3482412976&uk=3808900647</a></p>
 		  
