make changes to the apps and the landing page

--- a/index.html
+++ b/index.html
@@ -75,20 +75,20 @@
 	<tr>
         <td>
             <h2>Apps/Coding</h2>
-            <p>I began to use <a href="http://sae.sina.com.cn/">SAE</a> even in its alpha version, since I went to <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and have been able to create some Web apps/sites. I began developing iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons.
+            <p>I began to use <a href="http://sae.sina.com.cn/">SAE</a> even in its alpha version, since I joined the <a href="http://college.sina.com">Sina Web College</a>. I learned PHP there, and began to create Web apps/sites. I began developing iOS and Android apps as part of my work in <a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">ICST of PKU</a>. I also write other codes, in different languages, for various reasons.
             Next are some results of my coding:</p>
             <p><a href="./apps">Shengbin's Small Apps<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">Shengbin's Bitbucket</a></p>
-            <p><a href="https://github.com/shengbinmeng">Shengbin's Github</a></p>
+            <p><a href="https://github.com/shengbinmeng">Shengbin's GitHub</a></p>
         </td>
         <td>
             <h2>应用/代码</h2>
             <p>我曾在<a href="http://college.sina.com">新浪网络学院</a>学习PHP，并作为第一批试用者接触了<a href="http://sae.sina.com.cn/">新浪SAE</a>。
-            因此我可以写一些简单的网页应用或搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">北大计算机科学技术研究所</a>之后，
-            我接触了iOS和Android开发，并写了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
+            因此我可以写一些简单的网页应用，或是搭建网站。进入<a href="http://www.icst.pku.edu.cn/vip/en/page/student/shengbin.html">北京大学计算机科学技术研究所</a>之后，
+            我接触了iOS和Android开发，并编写和发布了几个移动应用。此外，我也因为各种原因写其他代码。从以下的链接可以看到我写过的一些应用或开源代码:</p>
             <p><a href="./apps">我的小应用<a/></p>
             <p><a href="https://bitbucket.org/shengbinmeng">我的Bitbucket代码库</a></p>
-            <p><a href="https://github.com/shengbinmeng">我的Github代码库</a></p>    
+            <p><a href="https://github.com/shengbinmeng">我的GitHub代码库</a></p>    
         </td>	
     </tr>
 	<tr>
@@ -120,7 +120,7 @@
 	<tr>
         <td>
             <h2>Social Network</h2>
-            <p>I am not a really socialized person. That doesn't stop me trying all kinds of social network. 
+            <p>I am not really a socialized person. However, that doesn't stop me trying all kinds of social network. 
             You can find me in the following places: </p>
             <p><a href="http://weibo.com/msb91">Weibo</a>(login required)</p>
             <p><a href="http://www.renren.com/shengbinmeng">Renren</a>(login required)</p>
@@ -132,7 +132,7 @@
         </td>
         <td>
             <h2>社交网站</h2>
-            <p>其实我不怎么喜欢用公开的社交网站。虽然如此，你仍然能在各种流行的网站上找到我的账号:</p>
+            <p>其实我不是非常喜欢使用公共的社交网站。但我愿意尝试和接受新的东西，因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
             <p><a href="http://www.douban.com/people/msb91/">edwin@豆瓣</a></p>
@@ -153,7 +153,7 @@
         </td>
         <td>
             <h2>联系我</h2>
-            <p>从上面的内容你应该已经能够联系到我了。这里再明确给出两种时效性更好的联系方式（手机号就不公开了）：</p>
+            <p>如果访问了上面链接的内容，你应该已经能够联系到我了。这里再明确给出两种时效性更好的联系方式（手机号就不公开了吧）：</p>
             <ul>
             <li>Email：shengbinmeng@me.com</li>
             <li>QQ: 815237522</li>
