--- a/apps/index.html
+++ b/apps/index.html
@@ -44,7 +44,7 @@
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
     </div>
-    <p>Welcome!</p>
+    <p>Welcome!Shengbin Meng</p>
     <div style="clear:both"></div>
 </div>
 
@@ -57,6 +57,10 @@
 	<li><a href="chisha">ChiSha</a></li>
 	<li><a href="baidu-it-for-you">Baidu It For You</a></li>
 </ul>
+<h2>More:</h2>
+<p>Some web apps powered by PHP are hosted on the Sina App Engine, which can be accessed by the following link.<p>
+<p><a href="http://shengbin.sinaapp.com">shengbin.sinaapp.com</p>
+
 </div>
 
 <footer>
