add Goodle analytics code

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <td>
             <h2>About</h2>
             <p>Hello World!</p>
-            <p>This is a landing page, from where you can get information about me on the web (if you'd like to, and I'd like you to:).</p>
+            <p>This is a landing page, from where you can get information about me on the web (I do consider privacy:).</p>
         </td>
         <td>
             <h2>简介</h2>
@@ -132,7 +132,7 @@
         </td>
         <td>
             <h2>社交网站</h2>
-            <p>其实我不是非常喜欢使用公共的社交网站。但我愿意尝试和接受新的东西，因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
+            <p>其实我不怎么使用公共的社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
             <p><a href="http://www.douban.com/people/msb91/">edwin@豆瓣</a></p>
