--- a/apps/baidu-it-for-you/index.html
+++ b/apps/baidu-it-for-you/index.html
@@ -1,15 +1,29 @@
 <!doctype html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>让我帮你百度一下</title>
-    
-    <meta content="用于教导那些不知道自己使用搜索引擎解决简单问题的家伙" name="description">
-    <meta content="百度、搜索、教学、使用方法、帮忙" name="keywords">
-    <link rel="stylesheet" type="text/css" href="./styles/main.css">
-    
-    <script src="./scripts/jquery.min.js" type="text/javascript"></script>
-    <script src="./scripts/bundle.js" type="text/javascript"></script>
+<meta charset="utf-8">
+<title>让我帮你百度一下</title>
+<meta content="用于教导那些不知道自己使用搜索引擎解决简单问题的家伙" name="description">
+<meta content="百度、搜索、教学、使用方法、帮忙" name="keywords">
+<link rel="stylesheet" type="text/css" href="./styles/main.css">
+
+<script src="./scripts/jquery.min.js" type="text/javascript"></script>
+<script src="./scripts/bundle.js" type="text/javascript"></script>
+<!-- for Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30081581-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- end for Google Analytics -->
 </head>
 
 <body>
