--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -6,7 +6,21 @@
   <meta name="description" content="Shengbin's App - ChiSha">
   <link rel="stylesheet" type="text/css" href="../stylesheets/apps.css"/>
   <link rel="stylesheet" type="text/css" href="/shengbin.css">
+<!-- for Google Analytics -->
+<script type="text/javascript">
 
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30081581-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- end for Google Analytics -->
 </head>
 
 <body>
@@ -58,7 +72,7 @@
 		  <p><a href="http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647">http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647</a></p>
           
           <h2>联系开发者</h2>
-		  <p>如有建议或需要帮助，可发邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
