--- a/enjoy/music.html
+++ b/enjoy/music.html
@@ -5,6 +5,21 @@
 <title>Music - 音乐</title>
 <link rel="stylesheet" type="text/css" href="./enjoy.css">
 <link rel="stylesheet" type="text/css" href="/shengbin.css">
+<!-- for Google Analytics -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-30081581-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
+<!-- end for Google Analytics -->
 </head>
 
 <body>
