--- a/apps/index.html
+++ b/apps/index.html
@@ -44,7 +44,7 @@
         <li><a href="http://xiangce.baidu.com/shengbinmeng">Photos</a></li>
     </ul>
     </div>
-    <p>Welcome!Shengbin Meng</p>
+    <p>Welcome!</p>
     <div style="clear:both"></div>
 </div>
 
