--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <td>
             <h2>About</h2>
             <p>Hello World!</p>
-            <p>This is a landing page, from where you can get information about me on the web (I do consider privacy:).</p>
+            <p>This is a landing page, from where you can get information about me on the web.</p>
         </td>
         <td>
             <h2>简介</h2>
