update link to the App Store

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -71,7 +71,7 @@
 		  
 		  <h2>IPGateway-iOS（在iPhone/iPad上使用）</h2>
 		  <p>IPGateway for iPhone and iPad is available in the App Store（iOS版本可以在App Store免费下载）:</p>
-			<p><a href="https://itunes.apple.com/cn/app/ipgateway/id493761518?l=en&amp;mt=8">https://itunes.apple.com/cn/app/ipgateway/id493761518?l=en&amp;mt=8</a></p>
+			<p><a href="https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8">https://itunes.apple.com/cn/app/ipgateway/id493761518?mt=8</a></p>
 			<p>By the way, you may also use this client（你也可以用下面这个客户端）: <a href="http://itunes.apple.com/cn/app/pku-ipgw-client/id509145354?l=en&mt=8">IPGWClient</a>.</p>
 
 		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
