--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -69,7 +69,7 @@
           <h2>北大未名Lite</h2>
 		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。</p>
 		  <p>可在App Store下载：</p>
-		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?l=en&mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?l=en&mt=8</a></p>
+		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8</a></p>
 		  <h2>联系开发者</h2>
 		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
 		  
