update links of IPGateway for Android and Mac

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -76,12 +76,12 @@
 
 		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
 		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
-		  <p><a href="http://pan.baidu.com/share/link?shareid=3482412976&uk=3808900647">http://pan.baidu.com/share/link?shareid=3482412976&uk=3808900647</a></p>
+		  <p><a href="http://pan.baidu.com/s/1tETkE">http://pan.baidu.com/s/1tETkE</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
 		  <p>Click the following link to download the .apk file, and install it on your Android devices.
 		  （点击下面的链接下载.apk文件，并在安卓设备上安装即可。）</p>
-		  <p><a href="http://pan.baidu.com/share/link?shareid=3499604422&uk=3808900647">http://pan.baidu.com/share/link?shareid=3499604422&uk=3808900647</a></p>
+		  <p><a href="http://pan.baidu.com/s/1DsgA1">http://pan.baidu.com/s/1DsgA1</a></p>
 		  
 		  <h2>Contact（联系开发者）</h2>
 		  <p>Have questions or suggestions? Feel free to send me emails（如有任何问题或建议，可发电子邮件至）: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
