use div for footer

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ var duoshuoQuery = {short_name:"shengbin"};
 
 </div>
 
-<footer>
+<div id="footer">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- HomePageBottom -->
 <ins class="adsbygoogle"
@@ -190,6 +190,6 @@ var duoshuoQuery = {short_name:"shengbin"};
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-</footer>
+</div>
 </body>
 </html>
