--- a/index.html
+++ b/index.html
@@ -181,15 +181,17 @@ var duoshuoQuery = {short_name:"shengbin"};
 </div>
 
 <div id="footer">
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- HomePageBottom -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-7159091925902685"
-     data-ad-slot="3211222053"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+	<!-- Google AdSense BEGIN -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- PageBottom -->
+	<ins class="adsbygoogle"
+		 style="display:inline-block;width:728px;height:90px"
+		 data-ad-client="ca-pub-7159091925902685"
+		 data-ad-slot="3211222053"></ins>
+	<script>
+	(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+	<!-- Google AdSense END -->
 </div>
 </body>
 </html>
