add Google Play link

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -79,8 +79,10 @@
 		  <p><a href="http://pan.baidu.com/s/1tETkE">http://pan.baidu.com/s/1tETkE</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
-		  <p>Click the following link to download the .apk file, and install it on your Android devices.
-		  （点击下面的链接下载.apk文件，并在安卓设备上安装即可。）</p>
+		  <p>Click the following link to install it from the Google Play.（点击下面的链接从Google Play应用商店安装。）</p>
+		  <p><a href="https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway">https://play.google.com/store/apps/details?id=pku.shengbin.ipgateway</a></p>
+		  <p>Or click the following link to download the .apk file, and install it on your Android devices.
+		  （或者点击下面的链接下载.apk文件，并在安卓设备上安装。）</p>
 		  <p><a href="http://pan.baidu.com/s/1DsgA1">http://pan.baidu.com/s/1DsgA1</a></p>
 		  
 		  <h2>Contact（联系开发者）</h2>
