change bottom; add ChiSha App Store link

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -55,7 +55,7 @@
   <div class="wrapper">
     <h1 class="title">IPGateway</h1>
     <div id="container">
-      <p class="tagline">For Internet Users of Peking University.</p>
+      <p class="tagline">For Internet users of Peking University.</p>
       <div id="main" role="main">
         <div class="download-bar">
         <div class="inner">
@@ -99,7 +99,7 @@
     </div>
     <footer>
       <div class="owner">
-      <p><a href="http://www.shengbin.me" class="avatar"><img src="https://0.gravatar.com/avatar/b8c7ce4f117d1a4999dc7c0d6935428b?d=https%3A%2F%2Fidenticons.github.com%2F164543f79857390b2deb8efdd668327f.png&amp;s=30" width="48" height="48"/></a> <a href="http://www.shengbin.me">shengbinmeng</a> maintains all of this. He is <a href="http://www.shengbin.me">here.</a></p>
+      <p><a href="http://www.shengbin.me" class="avatar"><img src="http://www.shengbin.me/shengbin.png" width="48" height="48"/></a> <a href="http://www.shengbin.me">Shengbin Meng</a> maintains all of this. You can <a href="https://me.alipay.com/shengbinmeng">buy him a cup of coffee.</a></p>
       </div>
     </footer>
   </div>
