update Douban show

--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -55,7 +55,7 @@
 <p class="tagline">I always watch movies, good or perfect.</p>
 <p class="tagline">Recently the following ones.</p>
 <div id="movies">
-<p><script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?show=collection&amp;n=16&amp;columns=8&amp;picsize=medium&amp;hidelogo=yes&amp;hideself=yes&amp;cat=movie" ></script>
+<p><script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;cat=movie%7Cbook&amp;columns=8"></script>
 </p>
 </div>
 </div>
