--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -67,7 +67,7 @@
         </div>
         <article class="markdown-body">
           <h2>吃啥</h2>
-		  <p>“吃啥”是一个帮助你决定吃啥的小应用。</p>
+		  <p>顾名思义，“吃啥”是一个帮助你决定吃啥的小应用。</p>
 		  
 		  <p>iOS版本可以在App Store免费下载:</p>
 		  <p><a href="https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8">https://itunes.apple.com/cn/app/chi-sha/id594761510?mt=8</a></p>
