--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -55,8 +55,14 @@
 <p class="tagline">I always watch movies, good or perfect.</p>
 <p class="tagline">Recently the following ones.</p>
 <div id="movies">
-<p><script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;cat=movie%7Cbook&amp;columns=8"></script>
-</p>
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="799" height="465" id="passing" >
+    <param name="movie" value="http://www.douban.com/doushow/msb91/collection_latest_movie_18_6_medium_nologo_noself/doushow.swf" />
+    <param name="quality" value="high" />
+    <param name="scale" value="noscale"/>
+    <param name="align" value="tl"/>
+    <param name="wmode" value="transparent"/>
+    <embed src="http://www.douban.com/doushow/msb91/collection_latest_movie_18_6_medium_nologo_noself/doushow.swf" wmode="transparent" quality="high"  width="799" height="465" name="passing" scale="noscale" align="tl" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
 </div>
 </div>
 
