--- a/enjoy/reading.html
+++ b/enjoy/reading.html
@@ -53,7 +53,7 @@
 
 <div class="main">
 <h1>Reading</h1>
-<p class="tagline">Eat for life. Read to live.</p>
+<p class="tagline">Eat to live. Read for life.</p>
 <p class="tagline">I share some of what I read via Weibo. Check it out!</p>
 <br />
 <br />
