change enjoy title

--- a/enjoy/index.html
+++ b/enjoy/index.html
@@ -55,7 +55,7 @@
 </div>
 
 <div class="main"> 
-<h1>Enjoy</h1>
+<h1>Enjoy This With Me</h1>
 <h2>Click to go:</h2>
 <ul>
 <li><a href="./music.html">Music</a></li>
