update douban movies show

--- a/enjoy/movies.html
+++ b/enjoy/movies.html
@@ -60,14 +60,7 @@
 <p class="tagline">Recently the following ones.</p>
 <br><br>
 <div id="movies">
-<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=7,0,0,0" width="799" height="465" id="passing" >
-    <param name="movie" value="http://www.douban.com/doushow/msb91/collection_latest_movie_16_8_medium_nologo_noself/doushow.swf" />
-    <param name="quality" value="high" />
-    <param name="scale" value="noscale"/>
-    <param name="align" value="tl"/>
-    <param name="wmode" value="transparent"/>
-    <embed src="http://www.douban.com/doushow/msb91/collection_latest_movie_16_8_medium_nologo_noself/doushow.swf" wmode="transparent" quality="high"  width="799" height="465" name="passing" scale="noscale" align="tl" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" />
-</object>
+<script type="text/javascript" src="http://www.douban.com/service/badge/msb91/?selection=latest&amp;picsize=medium&amp;hideself=on&amp;show=collection&amp;n=16&amp;hidelogo=on&amp;cat=movie&amp;columns=8"></script>
 </div>
 </div>
 
