update email address

--- a/apps/chisha/index.html
+++ b/apps/chisha/index.html
@@ -80,7 +80,7 @@
 		  <p><a href="http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647">http://pan.baidu.com/share/link?shareid=1080133947&uk=3808900647</a></p>
           
           <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
