--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -75,7 +75,7 @@
 		  <p>可在App Store下载：</p>
 		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8</a></p>
 		  <h2>联系开发者</h2>
-		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:i@shengbin.me">i@shengbin.me</a></p>
+		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
 		  
 		  <hr>
 		  <h1>Donate</h1>
