--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>其实我不怎么使用公共的社交网站。但我喜欢尝试和接受新的东西，也愿意分享。因此你仍然能在各种流行的网站上找到我的账号。比如这些:</p>
             <p><a href="http://weibo.com/msb91">梦圣@新浪微博</a>（需要登录）</p>
             <p><a href="http://www.renren.com/shengbinmeng">孟胜彬@人人网</a>（需要登录）</p>
-            <p><a href="http://www.douban.com/people/msb91/">edwin@豆瓣</a></p>
+            <p><a href="http://www.douban.com/people/msb91/">msb91@豆瓣</a></p>
             <p><a href="http://user.qzone.qq.com/815237522">ed@QQ空间</a></p>
             <p><a href="http://twitter.com/shengbinmeng">shengbinmeng@Twitter</a></p>
             <p><a href="https://www.facebook.com/shengbin.meng">Shengbin Meng@Facebook</a>（需要登录）</p>
