update the donation

--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -64,7 +64,7 @@
         <div class="download-bar">
         <div class="inner">
           <a href="https://bitbucket.org/shengbinmeng" class="code" target="_blank">Source Code（源码）</a>
-		  <a href="https://me.alipay.com/shengbinmeng" class="download-button" target="_blank"><span>Donate（捐赠）</span></a>
+		  <a href="http://www.shengbin.me/donate" class="download-button" target="_blank"><span>Donate（捐赠）</span></a>
         </div>
 		
         <span class="blc"></span><span class="trc"></span>
@@ -81,13 +81,13 @@
 		  <h1>Donate</h1>
 		  <a name="donate"></a>
 			<p>The app itself is free, but if it makes your life better and, by giving away a little money, you want to make mine better too, please donate via the following link. Don't forget to leave a note. And thank you for whatever amount of the money. （该应用本身是免费的，但如果你觉得好用，不妨通过捐赠来支持开发者。点击下面的链接进行付款。无论多少，都非常感谢！）</p>
-			<p><a href="https://me.alipay.com/shengbinmeng">https://me.alipay.com/shengbinmeng</a></p>
+			<p><a href="http://www.shengbin.me/donate">http://www.shengbin.me/donate</a></p>
         </article>
       </div>
     </div>
     <footer>
       <div class="owner">
-      <p><a href="http://www.shengbin.me" class="avatar"><img src="http://www.shengbin.me/shengbin.png" width="48" height="48"/></a> <a href="http://www.shengbin.me">Shengbin Meng</a> maintains all of this. You can <a href="https://me.alipay.com/shengbinmeng">buy him a cup of coffee.</a></p>
+      <p><a href="http://www.shengbin.me" class="avatar"><img src="http://www.shengbin.me/shengbin.png" width="48" height="48"/></a> <a href="http://www.shengbin.me">Shengbin Meng</a> maintains all of this. You can <a href="http://www.shengbin.me/donate">buy him a cup of coffee.</a></p>
       </div>
     </footer>
   </div>
