--- a/apps/unibbs/index.html
+++ b/apps/unibbs/index.html
@@ -71,9 +71,12 @@
         </div>
         <article class="markdown-body">
           <h2>北大未名Lite</h2>
-		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。</p>
+		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端 （Lite版本只能潜水）。</p>
 		  <p>可在App Store下载：</p>
 		  <p><a href="http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8">http://itunes.apple.com/cn/app/bei-da-wei-minglite/id509910767?mt=8</a></p>
+		  <h2>北大未名</h2>
+		  <p>访问北大未名BBS网站(http://bbs.pku.edu.cn)的iOS客户端。</p>
+		  <p>即将发布。</p>
 		  <h2>联系开发者</h2>
 		  <p>如有任何问题或建议，可发电子邮件至: <a href="mailto:hello@shengbin.me">hello@shengbin.me</a></p>
 		  
