update the IPGateway-Mac link to new version

--- a/apps/ipgateway/index.html
+++ b/apps/ipgateway/index.html
@@ -80,7 +80,7 @@
 
 		  <h2>IPGateway-Mac（在苹果电脑上使用）</h2>
 		  <p>Click the following link to download the .zip file, extract it, then you will get IPGateway.app. Better put it in the /Applications folder).（点击下面的链接下载.zip文件，直接运行解压得到的IPGateway.app即可。最好把它放在/Applications文件夹。）</p>
-		  <p><a href="http://pan.baidu.com/s/1tETkE">http://pan.baidu.com/s/1tETkE</a></p>
+		  <p><a href="http://pan.baidu.com/s/1ntG89dv">http://pan.baidu.com/s/1ntG89dv</a></p>
 		  
 		  <h2>IPGateway-Android（安卓版）</h2>
 		  <p>Click the following link to install it from the Google Play.（点击下面的链接从Google Play应用商店安装。）</p>
